added animated background, critters table can switch from fish sea and bugs

--- a/achub/src/App.css
+++ b/achub/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: 'SweetSaturday';
+  src: local('SweetSaturday'), url(./fonts/Sweet\ Saturday.ttf) format('truetype')
+}
+
