--- a/achub/src/index.css
+++ b/achub/src/index.css
@@ -28,12 +28,12 @@ code {
   align-items: center;
 }
 
-/* scroll bar settings for chrome
+scroll bar settings for chrome
 ::-webkit-scrollbar {
   width: 5px;
   height: 8px;
   background-color: green;
-} */
+}
 
 /* CSS from https://codepen.io/Leoche/pen/rNVggzx */
 html,
