--- a/achub/src/App.css
+++ b/achub/src/App.css
@@ -2,18 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,20 +22,11 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
 
 @font-face {
   font-family: 'SweetSaturday';
@@ -50,4 +41,13 @@
 @font-face {
   font-family: 'Nunito';
   src: local('Nunito'), url(./fonts/Nunito-VariableFont_wght.ttf) format('truetype')
+}
+
+button {
+  background-color: #f1ebdc;
+  border-radius: 40%;
+  font-family: 'SweetSaturday';
+  font-size: 17px;
+  padding: 6px;
+  margin-left: 6px;
 }
