--- a/achub/src/App.css
+++ b/achub/src/App.css
@@ -44,7 +44,7 @@
 }
 
 button {
-  background-color: #f1ebdc;
+  background-color: #feed9b;
   border-radius: 40%;
   font-family: 'SweetSaturday';
   font-size: 17px;
